@@ -60,20 +60,18 @@ void testSingle(const boost::shared_ptr<StochasticProcess1D>& process,
     }
 }
 
-void testMultiple(
-        const std::vector<boost::shared_ptr<StochasticProcess1D> >& processes,
-        const Matrix& correlation,
-        const std::string& tag, Real expected[]) {
+void testMultiple(const boost::shared_ptr<GenericStochasticProcess>& process,
+                  const std::string& tag, Real expected[]) {
     typedef PseudoRandom::rsg_type rsg_type;
     typedef MultiPathGenerator<rsg_type>::sample_type sample_type;
 
     BigNatural seed = 42;
     Time length = 10;
     Size timeSteps = 12;
-    Size assets = processes.size();
+    Size assets = process->size();
     rsg_type rsg = PseudoRandom::make_sequence_generator(timeSteps*assets,
                                                          seed);
-    MultiPathGenerator<rsg_type> generator(processes, correlation,
+    MultiPathGenerator<rsg_type> generator(process,
                                            TimeGrid(length, timeSteps),
                                            rsg, false);
     for (Size i=0; i<100; i++)
@@ -157,17 +155,21 @@ void PathGeneratorTest::testMultiPathGenerator() {
     correlation[2][0] = 0.7; correlation[2][1] = 0.4; correlation[2][2] = 1.0;
 
     std::vector<boost::shared_ptr<StochasticProcess1D> > processes(3);
+    boost::shared_ptr<GenericStochasticProcess> process;
+
     processes[0] = boost::shared_ptr<StochasticProcess1D>(
                                        new BlackScholesProcess(x0,q,r,sigma));
     processes[1] = boost::shared_ptr<StochasticProcess1D>(
                                        new BlackScholesProcess(x0,q,r,sigma));
     processes[2] = boost::shared_ptr<StochasticProcess1D>(
                                        new BlackScholesProcess(x0,q,r,sigma));
+    process = boost::shared_ptr<GenericStochasticProcess>(
+                           new StochasticProcessArray(processes,correlation));
     Real result1[] = {
         0.1428138446652,
         0.2092744336113,
         0.04057136028457 };
-    testMultiple(processes, correlation, "Black-Scholes", result1);
+    testMultiple(process, "Black-Scholes", result1);
 
     processes[0] = boost::shared_ptr<StochasticProcess1D>(
                        new GeometricBrownianMotionProcess(100.0, 0.03, 0.20));
@@ -175,11 +177,13 @@ void PathGeneratorTest::testMultiPathGenerator() {
                        new GeometricBrownianMotionProcess(100.0, 0.03, 0.20));
     processes[2] = boost::shared_ptr<StochasticProcess1D>(
                        new GeometricBrownianMotionProcess(100.0, 0.03, 0.20));
+    process = boost::shared_ptr<GenericStochasticProcess>(
+                           new StochasticProcessArray(processes,correlation));
     Real result2[] = {
         24.04649099339,
         43.72875185354,
         6.44889193814 };
-    testMultiple(processes, correlation, "geometric Brownian", result2);
+    testMultiple(process, "geometric Brownian", result2);
 
     processes[0] = boost::shared_ptr<StochasticProcess1D>(
                                      new OrnsteinUhlenbeckProcess(0.1, 0.20));
@@ -187,11 +191,13 @@ void PathGeneratorTest::testMultiPathGenerator() {
                                      new OrnsteinUhlenbeckProcess(0.1, 0.20));
     processes[2] = boost::shared_ptr<StochasticProcess1D>(
                                      new OrnsteinUhlenbeckProcess(0.1, 0.20));
+    process = boost::shared_ptr<GenericStochasticProcess>(
+                           new StochasticProcessArray(processes,correlation));
     Real result3[] = {
         0.1145529276342,
         0.1609358646784,
         0.03128651475229 };
-    testMultiple(processes, correlation, "Ornstein-Uhlenbeck", result3);
+    testMultiple(process, "Ornstein-Uhlenbeck", result3);
 
     processes[0] = boost::shared_ptr<StochasticProcess1D>(
                                  new SquareRootProcess(0.1, 0.1, 0.20, 10.0));
@@ -199,11 +205,13 @@ void PathGeneratorTest::testMultiPathGenerator() {
                                  new SquareRootProcess(0.1, 0.1, 0.20, 10.0));
     processes[2] = boost::shared_ptr<StochasticProcess1D>(
                                  new SquareRootProcess(0.1, 0.1, 0.20, 10.0));
+    process = boost::shared_ptr<GenericStochasticProcess>(
+                           new StochasticProcessArray(processes,correlation));
     Real result4[] = {
         -0.07385744304226,
         0.04484225895393,
         -0.2484464926277 };
-    testMultiple(processes, correlation, "square-root", result4);
+    testMultiple(process, "square-root", result4);
 
     QL_TEST_TEARDOWN
 }
